--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
+    "pdfjs-dist": "^4.2.67",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^8.0.2",
+    "react-pdf-viewer": "^0.1.0",
     "react-router-dom": "^6.11.1",
     "sweetalert2": "^11.11.0"
   },
