--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "pdfjs-dist": "^4.2.67",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-pdf": "^8.0.2",
     "react-pdf-viewer": "^0.1.0",
+    "react-phone-number-input": "^3.4.3",
     "react-router-dom": "^6.11.1",
     "sweetalert2": "^11.11.0"
   },
